[gd_scene load_steps=18 format=3 uid="uid://be68yx0gtbtig"]

[ext_resource type="Script" path="res://Scripts/Classes/Enemies/KoopaTroopa.gd" id="1_t3ph6"]
[ext_resource type="PackedScene" uid="uid://rd7kkammpfnx" path="res://Instances/Prefabs/HeldObjects/koopa_shell.tscn" id="2_mn5ga"]
[ext_resource type="Texture2D" uid="uid://ey5rvgwjegt5" path="res://Assets/Sprites/Enemys/Koopas/KoopaShells/Green.png" id="3_ca75h"]
[ext_resource type="Texture2D" uid="uid://qdnjaj4gqtgf" path="res://Assets/Sprites/Enemys/Koopas/KoopaTroopas/Green.png" id="3_p66hl"]
[ext_resource type="Texture2D" uid="uid://jdnhuy5rfgpe" path="res://Assets/Sprites/Enemys/Koopas/MaskedKoopas/Green.png" id="5_2e474"]
[ext_resource type="Texture2D" uid="uid://b8bkvj4w4ew5v" path="res://Assets/Sprites/Objects/WingSprite.png" id="6_loeeu"]
[ext_resource type="Script" path="res://Scripts/Classes/ledge_detection.gd" id="7_ict7e"]
[ext_resource type="Script" path="res://Scripts/Classes/water_bouyancy.gd" id="8_dk183"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ffnw1"]
atlas = ExtResource("6_loeeu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jao0q"]
atlas = ExtResource("6_loeeu")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_x5s02"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffnw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jao0q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_cytue"]
resource_name = "default"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_j2ad1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:turning")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ub02c"]
resource_name = "Turn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:turning")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w3c2t"]
_data = {
&"default": SubResource("Animation_cytue"),
&"RESET": SubResource("Animation_j2ad1"),
&"Turn": SubResource("Animation_ub02c")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56jfv"]
size = Vector2(12, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ot44"]
size = Vector2(16, 20)

[node name="KoopaTroopa" type="CharacterBody2D" node_paths=PackedStringArray("main_animation_player") groups=["Enemies"]]
collision_layer = 8
collision_mask = 12
floor_constant_speed = true
script = ExtResource("1_t3ph6")
enemy_height = 12
yoshi_behavior = "Spit"
ice_size = Vector2(1.25, 1.75)
main_animation_player = NodePath("Sprite/Animations")
spit_item = ExtResource("2_mn5ga")
water_move_speed = 20

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(4.76837e-07, -13)
scale = Vector2(1.7, 2.2)
enable_node_path = NodePath("")

[node name="ShellDeath" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -8)
texture = ExtResource("3_ca75h")
hframes = 5

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("3_p66hl")
flip_h = true
hframes = 4

[node name="Wings" type="AnimatedSprite2D" parent="Sprite"]
visible = false
position = Vector2(-6, -3)
sprite_frames = SubResource("SpriteFrames_x5s02")
autoplay = "default"
frame_progress = 0.359816
flip_h = true

[node name="Animations" type="AnimationPlayer" parent="Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_w3c2t")
}
autoplay = "default"
speed_scale = 1.5

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_56jfv")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_3ot44")

[node name="AutumnSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
texture = ExtResource("5_2e474")
flip_h = true
hframes = 4

[node name="Wings" type="AnimatedSprite2D" parent="AutumnSprite"]
visible = false
position = Vector2(-7, -9)
sprite_frames = SubResource("SpriteFrames_x5s02")
autoplay = "default"
frame_progress = 0.359816
flip_h = true

[node name="Animations" type="AnimationPlayer" parent="AutumnSprite"]
libraries = {
&"": SubResource("AnimationLibrary_w3c2t")
}
autoplay = "default"
speed_scale = 1.5

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2(-6, -5)
target_position = Vector2(0, 16)
script = ExtResource("7_ict7e")
floor_normal = Vector2(-0.5, -0.5)
ray_length = 16

[node name="WaterBouyancy" type="Node" parent="." node_paths=PackedStringArray("hitbox")]
script = ExtResource("8_dk183")
hitbox = NodePath("../Hitbox")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
